# pipeLLM-acl

./: .gitignore  CMakeLists.txt  CTR.cpp  Makefile  README.md  chatbot.py  hack.h  infer.py  infer_simple.py  off.py  openssl.cpp  pipellm.cpp  pipellm.h  resource_monitor.h  run.sh  run_test.sh  runtest.py  send.sh  simple_test.cpp  start_server.sh  test.py  test_ssl.cpp  worker.cpp
PROF_000001_20251120215303276_PGLHRHPCQEAOEJLC/device_7/: dev_start.log.7  host_start.log.7  info.json.7  sample.json  start_info.7
PROF_000001_20251120215303276_PGLHRHPCQEAOEJLC/device_7/data/: ffts_profile.data.7.slice_0  ffts_profile.data.7.slice_0.done  ffts_profile.data.7.slice_1  ffts_profile.data.7.slice_1.done  ffts_profile.data.7.slice_2  ffts_profile.data.7.slice_2.done  (+17 more)
PROF_000001_20251120215303276_PGLHRHPCQEAOEJLC/host/: info.json  info.json.done  sample.json  sample.json.done  start_info
PROF_000001_20251120215303276_PGLHRHPCQEAOEJLC/mindstudio_profiler_output/: api_statistic_20251120215550.csv  op_statistic_20251120215550.csv
PROF_000001_20251128135916810_BRIEIAOEJKBPDEDA/device_4/: dev_start.log.4  host_start.log.4  info.json.4  sample.json  sample.json.done  start_info.4
PROF_000001_20251128135916810_BRIEIAOEJKBPDEDA/host/: info.json  info.json.done  sample.json  sample.json.done  start_info
PROF_000001_20251128135916810_BRIEIAOEJKBPDEDA/mindstudio_profiler_output/: api_statistic_20251128140121.csv  op_statistic_20251128140121.csv  task_time_20251128140121.csv
serial/: CTR.cpp  Makefile  hack.h  off.py  pipellm.c  pipellm.h  run.sh  start_server.sh
(+88 files in other folders)
